# android_system_update_engine

./: .clang-format  .gitignore  Android.bp  Android.mk  BUILD.gn  CPPLINT.cfg  Doxyfile  OWNERS  PRESUBMIT.cfg  PREUPLOAD.cfg  README.md  SConstruct  UpdateEngine.conf  action.h  action_mock.h  action_pipe.h  action_pipe_unittest.cc  action_processor.cc  action_processor.h  action_processor_mock.h  action_processor_unittest.cc  action_unittest.cc  binder_main.cc  binder_service.cc  binder_service.h  binder_service_android.cc  binder_service_android.h  binder_service_android_common.h  binder_service_brillo.cc  binder_service_brillo.h  binder_service_stable_android.cc  binder_service_stable_android.h  boot_control.h  boot_control_android.cc  boot_control_android.h  boot_control_android_unittest.cc  boot_control_chromeos.cc  boot_control_chromeos.h  boot_control_chromeos_unittest.cc  boot_control_interface.h  (+330 more)
aosp/: apex_handler_android.cc  apex_handler_android.h  apex_handler_android_unittest.cc  apex_handler_interface.h  binder_service_android.cc  binder_service_android.h  binder_service_android_common.h  binder_service_stable_android.cc  binder_service_stable_android.h  boot_control_android.cc  boot_control_android.h  cleanup_previous_update_action.cc  cleanup_previous_update_action.h  cleanup_previous_update_action_unittest.cc  cow_converter.cc  daemon_android.cc  daemon_android.h  daemon_state_android.cc  daemon_state_android.h  dynamic_partition_control_android.cc  dynamic_partition_control_android.h  dynamic_partition_control_android_unittest.cc  dynamic_partition_test_utils.h  dynamic_partition_utils.cc  dynamic_partition_utils.h  hardware_android.cc  hardware_android.h  logging_android.cc  metrics_reporter_android.cc  metrics_reporter_android.h  mock_dynamic_partition_control.h  mock_dynamic_partition_control_android.h  network_selector_android.cc  network_selector_android.h  platform_constants_android.cc  service_delegate_android_interface.h  sideload_main.cc  update_attempter_android.cc  update_attempter_android.h  update_attempter_android_unittest.cc
client-headers/: BUILD.gn
client_library/: client.cc  client_binder.cc  client_binder.h  client_dbus.cc  client_dbus.h  client_impl.cc  client_impl.h
common/: action.h  action_pipe.h  action_processor.cc  action_processor.h  action_processor_unittest.cc  action_unittest.cc  boot_control_android.cc  boot_control_android.h  boot_control_chromeos.cc  boot_control_chromeos.h  boot_control_chromeos_unittest.cc  boot_control_interface.h  boot_control_stub.cc  boot_control_stub.h  certificate_checker.cc  certificate_checker.h  certificate_checker_unittest.cc  cleanup_previous_update_action_delegate.h  clock.cc  clock.h  clock_interface.h  connection_utils.cc  connection_utils.h  constants.cc  constants.h  cow_operation_convert.cc  cow_operation_convert.h  cow_operation_convert_unittest.cc  cpu_limiter.cc  cpu_limiter.h  daemon_base.h  daemon_state_interface.h  dlcservice_interface.h  dlcservice_stub.cc  dlcservice_stub.h  download_action.h  dynamic_partition_control_interface.h  dynamic_partition_control_stub.cc  dynamic_partition_control_stub.h  error_code.h  (+68 more)
cros/: boot_control_chromeos.cc  boot_control_chromeos.h  boot_control_chromeos_unittest.cc  chrome_browser_proxy_resolver.cc  chrome_browser_proxy_resolver.h  common_service.cc  common_service.h  common_service_unittest.cc  connection_manager.cc  connection_manager.h  connection_manager_interface.h  connection_manager_unittest.cc  daemon_chromeos.cc  daemon_chromeos.h  dbus_connection.cc  dbus_connection.h  dbus_service.cc  dbus_service.h  dbus_test_utils.h  dlcservice_chromeos.cc  dlcservice_chromeos.h  download_action_chromeos.cc  download_action_chromeos.h  download_action_chromeos_unittest.cc  excluder_chromeos.cc  excluder_chromeos.h  excluder_chromeos_unittest.cc  fake_p2p_manager.h  fake_p2p_manager_configuration.h  fake_shill_proxy.cc  fake_shill_proxy.h  fake_system_state.cc  fake_system_state.h  hardware_chromeos.cc  hardware_chromeos.h  hardware_chromeos_unittest.cc  image_properties.h  image_properties_chromeos.cc  image_properties_chromeos_unittest.cc  logging.cc  (+49 more)
dbus_bindings/: org.chromium.NetworkProxyService.dbus-xml  org.chromium.UpdateEngineInterface.dbus-xml  org.chromium.UpdateEngineInterface.xml
init/: update-engine.conf
payload_consumer/: bzip_extent_writer.cc  bzip_extent_writer.h  bzip_extent_writer_unittest.cc  cached_file_descriptor_unittest.cc  certificate_parser_stub.cc  certificate_parser_stub.h  cow_writer_file_descriptor.cc  cow_writer_file_descriptor.h  cow_writer_file_descriptor_unittest.cc  delta_performer.cc  delta_performer.h  delta_performer_fuzzer.cc  delta_performer_integration_test.cc  delta_performer_unittest.cc  download_action.cc  download_action.h  download_action_android_unittest.cc  download_action_unittest.cc  extent_reader.cc  extent_reader_unittest.cc  extent_writer.h  extent_writer_unittest.cc  fake_extent_writer.h  fake_file_descriptor.cc  fake_file_descriptor.h  fec_file_descriptor.cc  file_descriptor.cc  file_descriptor.h  file_descriptor_utils.cc  file_descriptor_utils.h  file_descriptor_utils_unittest.cc  file_writer_unittest.cc  filesystem_verifier_action.cc  filesystem_verifier_action.h  filesystem_verifier_action_unittest.cc  install_plan.cc  install_plan.h  install_plan_unittest.cc  mock_partition_writer.h  mount_history.cc  (+35 more)
payload_generator/: ab_generator.cc  ab_generator.h  ab_generator_unittest.cc  annotated_operation.cc  annotated_operation.h  blob_file_writer.cc  blob_file_writer.h  blob_file_writer_unittest.cc  block_mapping.cc  block_mapping.h  block_mapping_unittest.cc  boot_img_filesystem.cc  boot_img_filesystem_unittest.cc  bzip.cc  bzip.h  cow_size_estimator.cc  cow_size_estimator.h  cow_size_estimator_stub.cc  cycle_breaker.cc  cycle_breaker.h  cycle_breaker_unittest.cc  deflate_utils.cc  deflate_utils.h  deflate_utils_unittest.cc  delta_diff_generator.cc  delta_diff_generator.h  delta_diff_generator_unittest.cc  delta_diff_utils.cc  delta_diff_utils.h  delta_diff_utils_unittest.cc  ext2_utils.h  (+67 more)
(+246 files in other folders)
